src/features/courses/genetics/layouts/Material.module.css
.pageContainer {
    flex: 1;
    padding: 0;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.overviewContent {
    display: flex;
    gap: 1.25rem;
    padding: 0 2rem;
    flex: 1;
    overflow: hidden;
}

/* left section */
.courseSection {
    flex: 2;
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
    padding: 0.5rem 0;
    overflow: hidden; /* ensure content doesn't overflow */
}

.imageContainer {
    flex: 2;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    border: 0.125rem solid #7dc8b7;
    border-radius: 1rem;
}

.imageContainer img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.courseDescription {
    flex: 1;
    min-height: 0;
    border: 0.125rem solid #7dc8b7;
    border-radius: 1rem;
    overflow-y: auto;
    background-color: #ffffff;
}

.courseDescription p {
    margin: 0.5rem 0.5rem 1rem 0.5rem; /* gap between paragraphs */
}

.questionList {
    flex: 1;
    display: flex;
    padding: 0;
    overflow: hidden;
    flex-direction: row;
    gap: 0.5rem;
}

.sidebarHeader h2 {
    font-size: 1.25rem;
    font-weight: medium;
    color: var(--neutral-700);
    margin: 0;
}

.radioGroup {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
}

.sidebarFooter {
    margin-top: auto;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

/* right sidebar */
.chatSidebar{
    flex: 1;
    display: flex;
    flex-direction: column;
}

